--- a/index.html
+++ b/index.html
@@ -281,7 +281,7 @@
             <!-- REPLACE THIS SECTION WITH YOUR LOGO AND STORE INFO -->
                <div class="store-logo">
                 <!-- REPLACE "logo.png" with your actual logo filename -->
-                <img src="logo.png" alt="Your Store Logo" onerror="this.style.display='none'; this.nextElementSibling.style.display='block';">
+                <img src="logo.jpg" alt="Your Store Logo" onerror="this.style.display='none'; this.nextElementSibling.style.display='block';">
                 <!-- Fallback tea emoji if logo doesn't load -->
                 <div class="store-logo-placeholder" style="display: none;">🍃</div>
             </div>
