--- a/index.html
+++ b/index.html
@@ -294,8 +294,8 @@
             <!-- SOCIAL MEDIA LINKS - REPLACE WITH YOUR ACTUAL LINKS -->
             <div class="social-links">
                 <a href="https://instagram.com/theteaologyboutique" class="social-link instagram" target="_blank">IG</a>
-                  <a href="https://tiktok.com/@teaology_" class="social-link tiktok" target="_blank">TIKTOK</a>
-                <a href="https://theteaologyboutique.etsy.com" class="social-link website" target="_blank">ETSY</a>
+                  <a href="https://tiktok.com/@teaology_" class="social-link tiktok" target="_blank">TT</a>
+                <a href="https://theteaologyboutique.etsy.com" class="social-link website" target="_blank">ES</a>
             </div>
         </div>
 
