--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
 
             
             <!-- QUIZ TITLE - Customize this -->
-            <h1 class="text-4xl brand-heading font-bold text-gray-700 mb-2">Tea Personality Quiz</h1>
+            <h1 class="text-4xl brand-heading font-bold text-gray-700 mb-2">The Tea-ology Personality Quiz</h1>
             <p class="text-gray-600 text-lg brand-body">Discover which tea matches your unique personality!</p>
         </div>
 
@@ -113,7 +113,7 @@
         <!-- Start Screen -->
         <div id="startScreen" class="text-center bg-white/10 backdrop-blur-sm rounded-2xl p-8 border border-white/20 fade-in">
             <h2 class="text-2xl font-['Poppins'] font-semibold text-gray-700 mb-4">Ready to discover your tea personality?</h2>
-            <p class="text-gray-600 mb-6">Answer 6 fun questions and find out which tea perfectly matches who you are!</p>
+            <p class="text-gray-600 mb-6">Answer 6 questions and find out which tea perfectly matches who you are!</p>
             <button onclick="startQuiz()" class="bg-white text-teal-700 px-8 py-3 rounded-full font-semibold text-lg hover:bg-blue-50 transition-all duration-300 transform hover:scale-105">
                 Start Quiz ✨
             </button>
