--- a/index.html
+++ b/index.html
@@ -289,27 +289,27 @@
             green: {
                 title: "Green Tea Personality",
                 emoji: "🍃",
-                description: "You're energetic, vibrant, and full of life! Like green tea, you're refreshing and invigorating to be around. You love staying active, trying new challenges, and inspiring others with your natural vitality. Your zest for life is contagious!"
+                description: "You're energetic, vibrant, and full of life! Like green tea, you're refreshing and invigorating to be around. You love staying active, trying new challenges, and inspiring others with your natural vitality. Your zest for life is contagious! Carry your Twinnings green tea bags in the gorgeous pastel green Tea-ology T-Bag"
             },
             chamomile: {
                 title: "Chamomile Tea Personality", 
                 emoji: "🌼",
-                description: "You're the peaceful soul everyone turns to for comfort. Like chamomile tea, you bring calm and serenity wherever you go. You value mindfulness, inner peace, and creating harmonious environments. Your gentle nature is a gift to the world."
+                description: "You're the peaceful soul everyone turns to for comfort. Like chamomile tea, you bring calm and serenity wherever you go. You value mindfulness, inner peace, and creating harmonious environments. Your gentle nature is a gift to the world. Your Twinings Chamomile tea bags would be perfect in the soft yellow Tea-ology T-Bag""
             },
             earl: {
                 title: "Earl Grey Personality",
                 emoji: "🎩", 
-                description: "You're sophisticated, refined, and have impeccable taste. Like Earl Grey tea, you appreciate the finer things in life and bring elegance to everything you do. You're thoughtful, cultured, and have a natural sense of style that others admire."
+                description: "You're sophisticated, refined, and have impeccable taste. Like Earl Grey tea, you appreciate the finer things in life and bring elegance to everything you do. You're thoughtful, cultured, and have a natural sense of style that others admire. The cool black or vibreant red Tea-ology T-Bag would be the ideal for your Earl Grey personality "
             },
             chai: {
                 title: "Chai Tea Personality",
                 emoji: "🤗",
-                description: "You're warm, nurturing, and create the coziest atmosphere wherever you go. Like chai tea, you're a perfect blend of comfort and spice. You love bringing people together, sharing stories, and making everyone feel at home. Your caring nature warms hearts."
+                description: "You're warm, nurturing, and create the coziest atmosphere wherever you go. Like chai tea, you're a perfect blend of comfort and spice. You love bringing people together, sharing stories, and making everyone feel at home. Your caring nature warms hearts. Chai tea would look fabulous in any Tea-ology T-bag!"
             },
             iced: {
                 title: "Iced Tea Personality", 
                 emoji: "🧊",
-                description: "You're social, adaptable, and effortlessly cool! Like iced tea, you're refreshing and perfect for any occasion. You love meeting new people, trying different experiences, and can fit in anywhere. Your flexibility and social charm make you everyone's favorite companion."
+                description: "You're social, adaptable, and effortlessly cool! Like iced tea, you're refreshing and perfect for any occasion. You love meeting new people, trying different experiences, and can fit in anywhere. Your flexibility and social charm make you everyone's favorite companion. The ice blue Tea-ology T-Bags would be perfect for your Twinnings tea before you add ice!"
             }
         };
 
