--- a/index.html
+++ b/index.html
@@ -289,7 +289,7 @@
             green: {
                 title: "Green Tea Personality",
                 emoji: "🍃",
-                description: "You're energetic, vibrant, and full of life! Like green tea, you're refreshing and invigorating to be around. You love staying active, trying new challenges, and inspiring others with your natural vitality. Your zest for life is contagious! Carry your Twinnings green tea bags in the gorgeous pastel green Tea-ology T-Bag"
+                description: "You're energetic, vibrant, and full of life! Like green tea, you're refreshing and invigorating to be around. You love staying active, trying new challenges, and inspiring others with your natural vitality. Carry your Twinnings green tea bags in the gorgeous pastel green Tea-ology T-Bag"
             },
             chamomile: {
                 title: "Chamomile Tea Personality", 
